--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -66,6 +66,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="BuildConfiguratorTests.cs" />
+    <Compile Include="Injections\IdenticalKeyTargetFinderTests.cs" />
     <Compile Include="KernelBuilder\ActivateFragmentTests.cs" />
     <Compile Include="KernelBuilder\CustomFactoryFragmentTests.cs" />
     <Compile Include="KernelBuilder\CustomFactoryParametersTests.cs" />
