--- a/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
+++ b/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
@@ -70,6 +70,7 @@
     <Compile Include="TestTypes\EquatableCollection.cs">
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
+    <Compile Include="TestTypes\IRegisterTest.cs" />
     <Compile Include="TestTypes\KeyedClass1.cs" />
     <Compile Include="TestTypes\NonMonadicPlaceholderCollection.cs" />
     <Compile Include="TestTypes\CrazyPlaceholderCollection.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="TestTypes\MultiConstructorTestClass.cs" />
     <Compile Include="TestTypes\PlaceholderCollection.cs" />
     <Compile Include="TestTypes\PropertyTestClass.cs" />
+    <Compile Include="TestTypes\RegistrationTest.cs" />
     <Compile Include="TestTypes\SealedClass1.cs" />
     <Compile Include="TestTypes\TestClass1.cs" />
     <Compile Include="TestTypes\TestClass2.cs" />
