Added tests for EnumerableToEnumerableInjectionStore.

--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Stores\ConvertibleInjectionStoreTests.cs" />
     <Compile Include="Stores\DelegateInjectionStoreFactoryTests.cs" />
     <Compile Include="Stores\EnumerableToArrayInjectionStoreTests.cs" />
+    <Compile Include="Stores\EnumerableToEnumerableInjectionStoreTests.cs" />
     <Compile Include="Stores\IdenticalPrimitiveInjectionStoreTests.cs" />
     <Compile Include="Stores\InstanceInjectionStoreFactoryTests.cs" />
     <Compile Include="Stores\TargetCacheTests.cs" />
