Added tests from EnumerableInjectionHint in array and enumerable injections.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -51,6 +51,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="IInjectionContext.cs" />
+    <Compile Include="Injections\EnumerableInjectionHint.cs" />
     <Compile Include="KernelBuilder\ActivateFragment.cs" />
     <Compile Include="KernelBuilder\CustomFactoryFragment.cs" />
     <Compile Include="KernelBuilder\CustomFactoryParameters.cs" />
