Added DTransform and DMerge delegates.
Added CreateTriggersTask and then realised that to write this the delegates would need to capture the hint; see above.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -53,7 +53,10 @@
     <Compile Include="IInjectionContext.cs" />
     <Compile Include="IInjectionTrigger.cs" />
     <Compile Include="IInjectionTriggerParameters.cs" />
+    <Compile Include="InjectionFactory\CreateTriggersTask.cs" />
     <Compile Include="Injections\DelegateInjectionTrigger.cs" />
+    <Compile Include="Injections\DMerge.cs" />
+    <Compile Include="Injections\DTransform.cs" />
     <Compile Include="Injections\EnumerableInjectionHint.cs" />
     <Compile Include="KernelBuilder\ActivateFragment.cs" />
     <Compile Include="KernelBuilder\CustomFactoryFragment.cs" />
@@ -63,7 +66,7 @@
     <Compile Include="KernelBuilder\AutoInjectionOptions.cs" />
     <Compile Include="KernelBuilder\InjectionKernel.cs" />
     <Compile Include="KernelBuilder\InjectionTriggerFragment.cs" />
-    <Compile Include="KernelBuilder\InjectionTriggerSource.cs" />
+    <Compile Include="KernelBuilder\InjectionTriggerCause.cs" />
     <Compile Include="KernelBuilder\NameRegexAutoInjectionStrategy.cs" />
     <Compile Include="KernelBuilder\NullAutoInjectionStrategy.cs" />
     <Compile Include="KernelBuilder\AutoInjectionFragment.cs" />
