--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -54,6 +54,7 @@
     <Compile Include="IInjectionTrigger.cs" />
     <Compile Include="IInjectionTriggerParameters.cs" />
     <Compile Include="InjectionFactory\CreateTriggersTask.cs" />
+    <Compile Include="InjectionFactory\InitializeTriggerParametersTask.cs" />
     <Compile Include="Injections\DelegateInjectionTrigger.cs" />
     <Compile Include="Injections\DMerge.cs" />
     <Compile Include="Injections\DTransform.cs" />
