--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -66,6 +66,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="BuildConfiguratorTests.cs" />
+    <Compile Include="InjectionFactory\InitializeTriggerParametersTaskTests.cs" />
     <Compile Include="Injections\DelegateInjectionTriggerTests.cs" />
     <Compile Include="Injections\EnumerableInjectionHintTests.cs" />
     <Compile Include="Injections\IdenticalKeyTargetFinderTests.cs" />
