Added constance / expression / direct parameters : source member shards.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -50,10 +50,13 @@
     <Compile Include="..\.build\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Configuration\DirectParametersSourceMemberShard.cs" />
+    <Compile Include="Configuration\ExpressionSourceMemberShard.cs" />
     <Compile Include="Configuration\PredicateMemberShard.cs" />
     <Compile Include="Configuration\LegendaryShards.cs" />
     <Compile Include="Configuration\MemberFragment.cs" />
     <Compile Include="Configuration\MemberShard.cs" />
+    <Compile Include="Configuration\ConstantSourceMemberShard.cs" />
     <Compile Include="IInjectionContext.cs" />
     <Compile Include="IInjectionTrigger.cs" />
     <Compile Include="IInjectionParameters.cs" />
