--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -50,7 +50,7 @@
     <Compile Include="..\.build\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Configuration\DirectParametersSourceMemberShard.cs" />
+    <Compile Include="Configuration\DelegateSourceMemberShard.cs" />
     <Compile Include="Configuration\ExpressionSourceMemberShard.cs" />
     <Compile Include="Configuration\PredicateMemberShard.cs" />
     <Compile Include="Configuration\LegendaryShards.cs" />
@@ -61,8 +61,12 @@
     <Compile Include="IInjectionTrigger.cs" />
     <Compile Include="IInjectionParameters.cs" />
     <Compile Include="IMemberInjectionDefintionBuilder.cs" />
+    <Compile Include="KernelFactory\CreateLabelSubTask.cs" />
     <Compile Include="KernelFactory\CreateTriggersTask.cs" />
+    <Compile Include="KernelFactory\IInjectionSubTask.cs" />
     <Compile Include="KernelFactory\InitializeInjectionParametersTask.cs" />
+    <Compile Include="KernelFactory\MemberConditionSubTask.cs" />
+    <Compile Include="KernelFactory\MemberInjectionTask.cs" />
     <Compile Include="Kernel\DelegateInjectionTrigger.cs" />
     <Compile Include="Kernel\DMerge.cs" />
     <Compile Include="Kernel\DTransform.cs" />
