--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -67,6 +67,7 @@
     <Compile Include="KernelFactory\InitializeInjectionParametersTask.cs" />
     <Compile Include="KernelFactory\MemberConditionSubTask.cs" />
     <Compile Include="KernelFactory\MemberInjectionTask.cs" />
+    <Compile Include="KernelFactory\MemberSourceConstantTransformSubTask.cs" />
     <Compile Include="Kernel\DelegateInjectionTrigger.cs" />
     <Compile Include="Kernel\DMerge.cs" />
     <Compile Include="Kernel\DTransform.cs" />
