Added tests for MemberShard and PredicateConditionMemberShard.

--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="BuildConfiguratorTests.cs" />
     <Compile Include="Configuration\MemberFragmentTests.cs" />
+    <Compile Include="Configuration\MemberShardTests.cs" />
     <Compile Include="Configuration\PredicateConditionMemberShardTests.cs" />
     <Compile Include="KernelFactory\ActivateTargetExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\AutoInjectionTaskDetailTests.cs" />
