--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="KernelFactory\InitializeInjectionParametersTaskTests.cs" />
     <Compile Include="KernelFactory\InititalizeFragmentsTaskTests.cs" />
     <Compile Include="KernelFactory\InjectionScaffoldTests.cs" />
+    <Compile Include="KernelFactory\MemberInjectionTaskTests.cs" />
     <Compile Include="KernelFactory\MergeFactoryTests.cs" />
     <Compile Include="KernelFactory\NullSourceTaskTests.cs" />
     <Compile Include="KernelFactory\ReturnMergeResultTaskTests.cs" />
