--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Kernel\PassThroughInjection.cs" />
     <Compile Include="Utilities\CollectionExtensions.cs" />
     <Compile Include="Utilities\EnumerableExtensions.cs" />
+    <Compile Include="KernelFactory\InheritedMemberInfoCollection.cs" />
     <Compile Include="Utilities\ParameterExpressionVisitor.cs" />
     <Compile Include="Utilities\Placeholder.cs" />
     <Compile Include="Utilities\PlaceholderExpressionVisitor.cs" />
