Added tests for reflection extensions.

--- a/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
+++ b/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
@@ -72,6 +72,7 @@
     <Compile Include="TestTypes\EquatableCollection.cs">
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
+    <Compile Include="TestTypes\EventTestClass.cs" />
     <Compile Include="TestTypes\IBaseTestClass3.cs" />
     <Compile Include="TestTypes\IRegisterTest.cs" />
     <Compile Include="TestTypes\KeyedClass1.cs" />
