--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="KernelFactory\CustomFactoryExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\DefaultFactoryExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\FallbackFactoryExpressionFactoryTests.cs" />
+    <Compile Include="KernelFactory\InheritedMemberInfoCollectionTests.cs" />
     <Compile Include="KernelFactory\InitializeMembersTaskTests.cs" />
     <Compile Include="KernelFactory\InitializeMergeVariablesTaskTests.cs" />
     <Compile Include="KernelFactory\InitializeTransformVariablesTaskTests.cs" />
