--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -64,7 +64,10 @@
     <Compile Include="KernelFactory\CreateLabelSubTask.cs" />
     <Compile Include="KernelFactory\CreateTriggersTask.cs" />
     <Compile Include="KernelFactory\IInjectionSubTask.cs" />
+    <Compile Include="KernelFactory\ILabelCache.cs" />
     <Compile Include="KernelFactory\InitializeInjectionParametersTask.cs" />
+    <Compile Include="KernelFactory\LabelCategory.cs" />
+    <Compile Include="KernelFactory\LabelCache.cs" />
     <Compile Include="KernelFactory\MemberConditionSubTask.cs" />
     <Compile Include="KernelFactory\MemberInjectionTask.cs" />
     <Compile Include="KernelFactory\MemberValueSourceTransformSubTask.cs" />
