Fixed a number of code analysis violations.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -61,16 +61,16 @@
     <Compile Include="IInjectionTrigger.cs" />
     <Compile Include="IInjectionParameters.cs" />
     <Compile Include="IMemberFragmentBuilder.cs" />
-    <Compile Include="KernelFactory\CreateLabelSubTask.cs" />
+    <Compile Include="KernelFactory\CreateLabelSubtask.cs" />
     <Compile Include="KernelFactory\CreateTriggersTask.cs" />
-    <Compile Include="KernelFactory\IInjectionSubTask.cs" />
+    <Compile Include="KernelFactory\IInjectionSubtask.cs" />
     <Compile Include="KernelFactory\ILabelCache.cs" />
     <Compile Include="KernelFactory\InitializeInjectionParametersTask.cs" />
     <Compile Include="KernelFactory\LabelCategory.cs" />
     <Compile Include="KernelFactory\LabelCache.cs" />
-    <Compile Include="KernelFactory\MemberConditionSubTask.cs" />
+    <Compile Include="KernelFactory\MemberConditionSubtask.cs" />
     <Compile Include="KernelFactory\MemberInjectionTask.cs" />
-    <Compile Include="KernelFactory\MemberValueSourceTransformSubTask.cs" />
+    <Compile Include="KernelFactory\MemberValueSourceTransformSubtask.cs" />
     <Compile Include="Kernel\DelegateInjectionTrigger.cs" />
     <Compile Include="Kernel\DMerge.cs" />
     <Compile Include="Kernel\DTransform.cs" />
