--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="KernelFactory\InitializeInjectionParametersTaskTests.cs" />
     <Compile Include="KernelFactory\InititalizeFragmentsTaskTests.cs" />
     <Compile Include="KernelFactory\InjectionScaffoldTests.cs" />
+    <Compile Include="KernelFactory\LabelCacheTests.cs" />
     <Compile Include="KernelFactory\MemberConditionSubtaskTests.cs" />
     <Compile Include="KernelFactory\MemberInjectionTaskTests.cs" />
     <Compile Include="KernelFactory\MergeFactoryTests.cs" />
