--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="KernelFactory\AutoInjectionTaskTests.cs" />
     <Compile Include="KernelFactory\AutoInjectionTaskTransformDetailTests.cs" />
     <Compile Include="KernelFactory\CacheTargetTaskTests.cs" />
+    <Compile Include="KernelFactory\CreateLabelSubtaskTests.cs" />
     <Compile Include="KernelFactory\CreateTargetTaskTests.cs" />
     <Compile Include="KernelFactory\CreateTriggersTaskTests.cs" />
     <Compile Include="KernelFactory\CustomFactoryExpressionFactoryTests.cs" />
