--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -71,6 +71,7 @@
     <Compile Include="KernelFactory\MemberConditionSubtask.cs" />
     <Compile Include="KernelFactory\MemberInjectionTask.cs" />
     <Compile Include="KernelFactory\MemberValueSourceTransformSubtask.cs" />
+    <Compile Include="KernelFactory\SingleInstanceShardCategoryMemberFragmentSubtask.cs" />
     <Compile Include="Kernel\DelegateInjectionTrigger.cs" />
     <Compile Include="Kernel\DMerge.cs" />
     <Compile Include="Kernel\DTransform.cs" />
