--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="KernelFactory\LabelCacheTests.cs" />
     <Compile Include="KernelFactory\MemberConditionSubtaskTests.cs" />
     <Compile Include="KernelFactory\MemberInjectionTaskTests.cs" />
+    <Compile Include="KernelFactory\MemberValueSourceTransformSubtaskTests.cs" />
     <Compile Include="KernelFactory\MergeFactoryTests.cs" />
     <Compile Include="KernelFactory\NullSourceTaskTests.cs" />
     <Compile Include="KernelFactory\ReturnMergeResultTaskTests.cs" />
