--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -65,6 +65,7 @@
     <Compile Include="KernelFactory\AddToInjectionTrailTask.cs" />
     <Compile Include="KernelFactory\CreateLabelSubtask.cs" />
     <Compile Include="KernelFactory\CreateTriggersTask.cs" />
+    <Compile Include="KernelFactory\FallbackToTransformOnNullTargetTask.cs" />
     <Compile Include="KernelFactory\IInjectionSubtask.cs" />
     <Compile Include="KernelFactory\ILabelCache.cs" />
     <Compile Include="KernelFactory\InitializeInjectionParametersTask.cs" />
@@ -72,6 +73,9 @@
     <Compile Include="KernelFactory\LabelCache.cs" />
     <Compile Include="KernelFactory\MemberConditionSubtask.cs" />
     <Compile Include="KernelFactory\MemberInjectionTask.cs" />
+    <Compile Include="KernelFactory\MemberSourceMergeSubtask.cs" />
+    <Compile Include="KernelFactory\MemberSourceTransformSubtask.cs" />
+    <Compile Include="KernelFactory\MemberValueSourceMergeSubtask.cs" />
     <Compile Include="KernelFactory\MemberValueSourceTransformSubtask.cs" />
     <Compile Include="KernelFactory\SingleInstanceShardCategorySubtask.cs" />
     <Compile Include="Kernel\DelegateInjectionTrigger.cs" />
