--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Configuration\LegendaryShards.cs" />
     <Compile Include="Configuration\MemberFragment.cs" />
     <Compile Include="Configuration\MemberShard.cs" />
+    <Compile Include="Configuration\SourceMemberShard.cs" />
     <Compile Include="Configuration\ValueSourceMemberShard.cs" />
     <Compile Include="IInjectionContext.cs" />
     <Compile Include="IInjectionTrail.cs" />
@@ -63,24 +64,23 @@
     <Compile Include="IInjectionParameters.cs" />
     <Compile Include="IMemberFragmentBuilder.cs" />
     <Compile Include="KernelFactory\AddToInjectionTrailTask.cs" />
-    <Compile Include="KernelFactory\MemberParametersSourceMergeSubtask.cs" />
+    <Compile Include="KernelFactory\DelegateSourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\CreateLabelSubtask.cs" />
     <Compile Include="KernelFactory\CreateTriggersTask.cs" />
+    <Compile Include="KernelFactory\ExpressionSourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\FallbackToTransformOnNullTargetTask.cs" />
     <Compile Include="KernelFactory\IInjectionSubtask.cs" />
     <Compile Include="KernelFactory\ILabelCache.cs" />
     <Compile Include="KernelFactory\InitializeInjectionParametersTask.cs" />
+    <Compile Include="KernelFactory\ISourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\LegendaryLabels.cs" />
     <Compile Include="KernelFactory\LabelCache.cs" />
     <Compile Include="KernelFactory\MemberConditionSubtask.cs" />
-    <Compile Include="KernelFactory\MemberExpressionSourceMergeSubtask.cs" />
-    <Compile Include="KernelFactory\MemberExpressionSourceTransformSubtask.cs" />
     <Compile Include="KernelFactory\MemberInjectionTask.cs" />
-    <Compile Include="KernelFactory\MemberParametersSourceTransformSubtask.cs" />
-    <Compile Include="KernelFactory\MemberSourceMergeSubtask.cs" />
-    <Compile Include="KernelFactory\MemberSourceTransformSubtask.cs" />
-    <Compile Include="KernelFactory\MemberValueSourceMergeSubtask.cs" />
-    <Compile Include="KernelFactory\MemberValueSourceTransformSubtask.cs" />
+    <Compile Include="KernelFactory\SourceMemberAssignSubtask.cs" />
+    <Compile Include="KernelFactory\SourceMemberMergeSubtask.cs" />
+    <Compile Include="KernelFactory\SourceMemberTransformSubtask.cs" />
+    <Compile Include="KernelFactory\ValueSourceExpressionFactory.cs" />
     <Compile Include="KernelFactory\SingleInstanceShardCategorySubtask.cs" />
     <Compile Include="Kernel\DelegateInjectionTrigger.cs" />
     <Compile Include="Kernel\DMerge.cs" />
