--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
+[Bb]inaries/
 [Oo]bj/
 
 # mstest test results
@@ -106,5 +107,4 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
-/Sources/Bijectiv.Tests/FakesAssemblies
 *.DotSettings
