Added tests for ExpressionSourceExpressionFactory.

--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="KernelFactory\CustomFactoryExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\DefaultFactoryExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\DelegateSourceExpressionFactoryTests.cs" />
+    <Compile Include="KernelFactory\ExpressionSourceExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\ExpressionSourceMemberSubtaskTests.cs" />
     <Compile Include="KernelFactory\FallbackFactoryExpressionFactoryTests.cs" />
     <Compile Include="KernelFactory\EquivalentMemberInfoCollectionTests.cs" />
